--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <li><a href="#speakers">Speakers</a></li>
                 <li><a href="#venue">Venue</a></li>
                 <li><a href="#schedule">Schedule</a></li>
-                <li><a href="#registration" class="register-btn">Registration</a></li>
+                <li><a href="#registration" class="register">Registration</a></li>
             </ul>
         </nav>
     </header>
@@ -89,17 +89,21 @@
     <section id="venue">
         <div class="container">
             <h2>Venue</h2>
-            <div class="loc">
-            <img src="static/images/venue.jpg" alt="Venue Building">
+            
             <h3>NEO Tech Hub, Seoul, South Korea</h3>
             <p>Located in the heart of Seoul, NEO Tech Hub is a state-of-the-art venue designed for cutting-edge technology events.  
                 It features high-speed connectivity, immersive XR experience zones, and modern conference halls equipped with  
                 the latest AV technology. Attendees can enjoy a dynamic networking lounge, AI-powered assistance, and premium  
                 catering services, ensuring a seamless and engaging event experience.</p>
-            </div>
-            <div class="map-container">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d25311.33440059285!2d127.02435773485055!3d37.53345849323816!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x357ca47916d6cee9%3A0xaf7f92be5acffa56!2sSM%20Entertainment%20Studio%20Center!5e0!3m2!1sen!2sph!4v1743401007399!5m2!1sen!2sph"
-                width="1200" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+
+                <div class="map-container">
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d25311.33440059285!2d127.02435773485055!3d37.53345849323816!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x357ca47916d6cee9%3A0xaf7f92be5acffa56!2sSM%20Entertainment%20Studio%20Center!5e0!3m2!1sen!2sph!4v1743401007399!5m2!1sen!2sph"
+                    width="1100" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                </div>
+
+                <div class="loc">
+                    <img src="static/images/venue.jpg" alt="Venue Building Int">
+                    <img src="static/images/venue-ext.jpg" alt="Venue Building Ext">
             </div>
         </div>
     </section>
